# Visual-Team

./: CMakeLists.txt
CppPkg/: package.xml
CppPkg/install/: local_setup.sh  setup.sh
CppPkg/install/CppPkg/share/CppPkg/: package.bash  package.zsh
CppPkg/src/: test_client.cpp
CppPkg/src/install/: local_setup.sh
Judicial_system/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  robot.cpp  robot.h  robot_manager.cpp  robot_manager.h  robot_referee_system
my_subscriber_pkg/my_subscriber_pkg/: CMakeLists.txt  a.txt  package.xml
my_subscriber_pkg/my_subscriber_pkg/config/: params.yaml
my_subscriber_pkg/my_subscriber_pkg/src/: subscriber_member_function.cpp
my_subscriber_pkg/src/: subscriber_member_function.cpp
src/: pkg_cpp.cpp
src/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
